# Fox

./: .env.example  .gitignore  CHANGELOG.md  COMPLETE_GUIDE.md  DEPLOYMENT_GUIDE.md  DYNAMIC_TOPIC_SYSTEM_COMPLETE.md  FEATURES_RESTORED.md  FUTURE_FEATURES_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MODELS_2025_UPGRADE.md  MODELS_DOWNLOAD_GUIDE.md  MODELS_MIGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  README_NGINX.md  README_OLD.md  RELEASE_NOTES_2026_02_01.md  ROBAH_EXAMPLE_TRACE.md  ROBAH_FLOW_DIAGRAM.md  ROBAH_RESPONSE_FLOW.md  ROBAH_SYSTEM_FLOW.md  SCRIPTS.md  SYSTEM_GUIDE.md  TOPIC_CHANGE_FIX.md  __init__.py  cli.bat  cli.sh  english_tts_test.py  fix_frontend.bat  pyproject.toml  quick_test.py  quick_tts_test.py  requirements.txt  requirements_cli.txt  robah_cli.py  setup.py  start.bat  (+12 more)
backend/: __init__.py  main.py
brain/: __init__.py  advanced_core.py  code_analyzer.py  context_manager.py  core.py  dataset_manager.py  deep_personality_learning.py  file_manager.py  memory.py  personal_ai_core.py  personality.py  physical_interface.py  predictive_intelligence.py  response_templates.py  smart_cache.py  speech_handler.py  task_queue.py  user_profiler.py  web_search.py  workplace_intelligence.py
changelog/: CHANGELOG.md  PROJECT_ORGANIZATION_COMPLETE.md  RELEASE_NOTES_2026_02_01.md  ROADMAP.md
config/: __init__.py  settings.py
docs/: API_REFERENCE.md  CLI_GUIDE.md  COMPLETE_GUIDE.md  DATASET_SYSTEM.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURES.md  INSTALLATION.md  MODELS_GUIDE.md  PROGRAMMING_ASSISTANT.md  README.md  (+5 more)
(+118 files in other folders)
