[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fox-ai"
version = "1.0.0"
description = "Fox - Persian AI Assistant CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "theist.thirteenmm"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "assistant", "cli", "persian", "chatbot", "fox"]

dependencies = [
    "requests>=2.28.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.21.0",
]
full = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.21.0",
]

[project.scripts]
fox = "fox_cli.cli:main"

[project.urls]
Homepage = "https://github.com/theist.thirteenmm/Fox"
Repository = "https://github.com/theist.thirteenmm/Fox"

[tool.setuptools.packages.find]
include = ["fox_cli*"]
